<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/beijing"
    android:orientation="vertical">

    <EditText
        android:id="@+id/note_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etnameinit" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/noteTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.65"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btngGetnoteTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:text="@string/get_noteTime" />
    </LinearLayout>

    <EditText
        android:id="@+id/note_content"
        android:layout_width="match_parent"
        android:layout_height="280.0dip"
        android:gravity="top"
        android:hint="@string/etmaininit" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:text="@string/btnSave" />

        <Button
            android:id="@+id/btnClean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:text="@string/btnClean" />

        <Button
            android:id="@+id/btnReturn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:text="@string/btnReturn" />

        <Button
            android:id="@+id/btnExit2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:text="@string/btnExit" />

    </LinearLayout>


</LinearLayout>